Added and finished CPUvsCPU Random

--- a/Nim/Nim/Nim.csproj
+++ b/Nim/Nim/Nim.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CpuVsCpu\Game.cs" />
+    <Compile Include="CpuVsCpu\LearningCPU.cs" />
+    <Compile Include="CpuVsCpu\RandCpu.cs" />
+    <Compile Include="CpuVsCpu\State.cs" />
     <Compile Include="Nim.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
