--- a/Nim/Nim/Nim.csproj
+++ b/Nim/Nim/Nim.csproj
@@ -44,12 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CpuVsCpu\Game.cs" />
-    <Compile Include="CpuVsCpu\LearningCPU.cs" />
     <Compile Include="CpuVsCpu\RandCpu.cs" />
     <Compile Include="CpuVsCpu\State.cs" />
     <Compile Include="Nim.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
