--- a/Nim/Nim/Nim.csproj
+++ b/Nim/Nim/Nim.csproj
@@ -46,10 +46,12 @@
     <Compile Include="CpuVsCpu\Game.cs" />
     <Compile Include="CpuVsCpu\RandCpu.cs" />
     <Compile Include="CpuVsCpu\State.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Nim.cs" />
+    <Compile Include="Players\Player.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserPlayer.cs" />
+    <Compile Include="Players\UserPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
