--- a/Nim/Nim/Nim.csproj
+++ b/Nim/Nim/Nim.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CpuVsCpu\Game.cs" />
+    <Compile Include="CpuVsCpu\LearnCPU.cs" />
     <Compile Include="CpuVsCpu\RandCpu.cs" />
     <Compile Include="CpuVsCpu\State.cs" />
     <Compile Include="Menu.cs" />
