--- a/Nim/Nim/Nim.csproj
+++ b/Nim/Nim/Nim.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,8 +46,10 @@
   <ItemGroup>
     <Compile Include="CpuVsCpu\Game.cs" />
     <Compile Include="CpuVsCpu\LearnCPU.cs" />
+    <Compile Include="CpuVsCpu\MoveControl.cs" />
     <Compile Include="CpuVsCpu\RandCpu.cs" />
     <Compile Include="CpuVsCpu\State.cs" />
+    <Compile Include="CpuVsCpu\StateStore.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Players\Player.cs" />
     <Compile Include="Start.cs" />
